[tool.poetry]
name = "horizon-cogs"
version = "0.1.0"
description = ""
authors = ["Alex 'Avunia' Takiya <git@takiya.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8.10"
Red-DiscordBot = "~3.4.16"
SQLAlchemy = "~1.4.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
